force-app/main/default/objects/Patient__c/fields/DoctorAdvice__c.field-meta.xml
<CustomField>
    <fullName>DoctorAdvice__c</fullName>
    <label>DoctorAdvice</label>
    <type>TextArea</type>
</CustomField>