force-app/main/default/objects/Patient__c/fields/pAddress__c.field-meta.xml
<CustomField>
    <fullName>pAddress__c</fullName>
    <label>pAddress</label>
    <type>TextArea</type>
</CustomField>