force-app/main/default/objects/Patient__c/fields/pAge__c.field-meta.xml
<CustomField>
    <fullName>pAge__c</fullName>
    <label>pAge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>