force-app/main/default/objects/Patient__c/fields/pGender__c.field-meta.xml
<CustomField>
    <fullName>pGender__c</fullName>
    <label>pGender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>