force-app/main/default/objects/Patient__c/fields/pMobiles__c.field-meta.xml
<CustomField>
    <fullName>pMobiles__c</fullName>
    <label>pMobiles</label>
    <type>Phone</type>
</CustomField>