force-app/main/default/objects/Patient__c/fields/pProblem__c.field-meta.xml
<CustomField>
    <fullName>pProblem__c</fullName>
    <label>pProblem</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cough</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Fever</fullName>
            </value>
            <value>
                <fullName>Stomach Pain</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Eye</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Sinus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>