force-app/main/default/objects/Patient__c/fields/Related_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Related_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patients (Related Doctor)</relationshipLabel>
    <relationshipName>Patients1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>