force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pAge__c</columns>
    <columns>pGender__c</columns>
    <columns>pProblem__c</columns>
    <columns>pMobiles__c</columns>
    <columns>DoctorAdvice__c</columns>
    <columns>pAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>